# ci-executable-static

./: Main.hs  agda-mode.cabal
.github/workflows/: build.yml
