cabal-version:      3.0
name:               agda-mode
version:            0.0.0.0
license:            NONE
author:             andreas.abel@ifi.lmu.de
maintainer:         Andreas Abel
build-type:         Simple

executable agda-mode
    hs-source-dirs:   .
    main-is:          Main.hs
    default-language: Haskell2010
    build-depends:
      , base
      , directory
      , filepath
      , process
      , unix
